--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -210,6 +210,9 @@
           </div>
         </div>
       </div>
+      <div class="confirmation">
+          <h2>Merci ! Votre réservation a été reçue.</h2>
+      </div>
     </main>
     <footer>
       <p class="copyrights">
